[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/WritingRoom.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Fundos/Lareira.png" type="Texture" id=2]
[ext_resource path="res://Animations/AnimatedFire.tscn" type="PackedScene" id=3]
[ext_resource path="res://Animations/SurgeRuna.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Fundos/ReadTable.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Fundos/Paper.png" type="Texture" id=6]
[ext_resource path="res://Others/IndieFlower-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 230
outline_color = Color( 0.00392157, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[node name="WritingRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="WritingRoomSprite" type="Sprite" parent="."]
position = Vector2( 639.618, 359.528 )
scale = Vector2( 0.666174, 0.666174 )
texture = ExtResource( 2 )

[node name="Fire" parent="WritingRoomSprite" instance=ExtResource( 3 )]
position = Vector2( -258.407, 320.525 )
scale = Vector2( 0.828165, 0.828165 )

[node name="ButtonTable" type="Button" parent="WritingRoomSprite"]
margin_left = 347.55
margin_top = 17.9002
margin_right = 923.55
margin_bottom = 383.9
mouse_default_cursor_shape = 2
flat = true

[node name="ButtonFireplace" type="Button" parent="WritingRoomSprite"]
margin_left = -584.493
margin_top = -38.0712
margin_right = 182.507
margin_bottom = 410.929
mouse_default_cursor_shape = 2
flat = true

[node name="Fireplace" type="Sprite" parent="."]
visible = false
position = Vector2( 840.789, 144.569 )
scale = Vector2( 1.06531, 1.06531 )
texture = ExtResource( 2 )

[node name="Fire2" parent="Fireplace" instance=ExtResource( 3 )]
position = Vector2( -269.979, 333.259 )
scale = Vector2( 0.885167, 0.885167 )

[node name="ButtonCloseFireplace" type="Button" parent="Fireplace"]
margin_left = -467.079
margin_top = 61.8506
margin_right = 71.9213
margin_bottom = 326.851
mouse_default_cursor_shape = 2
flat = true

[node name="SurgeRuna" parent="Fireplace" instance=ExtResource( 4 )]
visible = false
position = Vector2( -213.522, 186.593 )
scale = Vector2( 0.657086, 0.657086 )

[node name="Table" type="Node2D" parent="."]
visible = false

[node name="Table" type="Sprite" parent="Table"]
position = Vector2( 640.353, 361.57 )
scale = Vector2( 0.675751, 0.675751 )
texture = ExtResource( 5 )

[node name="Paper" type="Sprite" parent="Table/Table"]
position = Vector2( -33.0092, 49.3727 )
rotation = -0.0754635
scale = Vector2( 0.976419, 0.850199 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Table/Table/Paper"]
margin_left = -692.0
margin_top = -224.0
margin_right = 699.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.337255, 0.290196, 0.231373, 1 )
align = 1
valign = 1
uppercase = true

[node name="ButtonClosePaper" type="Button" parent="Table"]
margin_left = 191.112
margin_top = 253.726
margin_right = 1052.11
margin_bottom = 546.726
mouse_default_cursor_shape = 2
flat = true
[connection signal="button_down" from="WritingRoomSprite/ButtonTable" to="." method="_on_ButtonTable_button_down"]
[connection signal="button_down" from="WritingRoomSprite/ButtonFireplace" to="." method="_on_ButtonFireplace_button_down"]
[connection signal="button_down" from="Fireplace/ButtonCloseFireplace" to="." method="_on_ButtonCloseFireplace_button_down"]
[connection signal="button_down" from="Table/ButtonClosePaper" to="." method="_on_ButtonClosePaper_button_down"]
